--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -32,21 +32,21 @@
             <div class="mb-3 col-md-4">
                 <lable for="price" class="form-label">Price</lable>
                 <input name="listing[price]" value="<%= listing.price %>" type="number" class="form-control" required>
-                <div class="invalid-feedback">Please enter a valid price</div>
+                <div class="invalid-feedback">Please enter a valid price !</div>
             </div>
     
             
             <div class="mb-3 col-md-8">
                 <lable for="country" class="form-label">Country</lable>
                <input name="listing[country]" value="<%= listing.country %>" type="text" class="form-control" required>
-               <div class="invalid-feedback">Please enter the country name</div>
+               <div class="invalid-feedback">Please enter the country name !</div>
             </div>
         </div>
         
         <div class="mb-3">
             <lable for="location" class="form-label">Location</lable>
             <input name="listing[location]" value="<%= listing.location %>" type="text" class="form-control" required>
-            <div class="invalid-feedback">Please enter the location</div>
+            <div class="invalid-feedback">Please enter the location !</div>
          </div>
         
         <button class="btn btn-dark edit-btn mt-3">Edit</button>
