--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -14,7 +14,7 @@
         <div class="mb-3">
             <lable for="description" class="form-label">Description</lable>
             <textarea name="listing[description]" class="form-control" required></textarea>
-            <div class="invalid-feedback">Please enter a short description</div>
+            <div class="invalid-feedback">Please enter a short description !</div>
         </div>
 
         <div class="mb-3">
@@ -26,13 +26,13 @@
             <div class="mb-3 col-md-4">
                 <lable for="price" class="form-label">Price</lable>
                 <input name="listing[price]" placeholder="1200"  class="form-control" required>
-                <div class="invalid-feedback">Please enter a valid price</div>
+                <div class="invalid-feedback">Please enter a valid price !</div>
              </div>
             
             <div class="mb-3 col-md-8">
                 <lable for="country" class="form-label">Country</lable>
                 <input name="listing[country]" placeholder="India" type="text" class="form-control" required>
-                <div class="invalid-feedback">Please enter the country name</div>
+                <div class="invalid-feedback">Please enter the country name !</div>
             </div>
         </div>
 
