--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -13,7 +13,10 @@
     <div class="card col-6 offset-3 show-card listing-card">
         <img src="<%=listing.image.url%>" class="card-img-top show-img" alt="listing_image">
         <div class="card-body">
-          <p class="card-text">Owned by <i><%= listing.owner.username %></i></p>
+            <p class="card-text">Owned by <i><%= listing.owner ? listing.owner.username : "Unknown" %></i></p>
+
+      
+           
             
             <p class="card-text"> <%= listing.description %> </p>
             <p class="card-text"> &#8377; <%= listing.price.toLocaleString("en-IN") %> </p>
@@ -24,7 +27,8 @@
 
     <br />
     
-<% if(currUser && listing.owner._id.equals(currUser._id)) { %>    
+<% if(currUser && listing.owner && listing.owner._id && listing.owner._id.equals(currUser._id)) { %>
+
 
 <div class="btns">
     <a href="/listings/<%= listing._id%>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
